[gd_scene load_steps=13 format=3 uid="uid://cc0byksex061e"]

[ext_resource type="Script" path="res://mob_0.gd" id="1_d1843"]
[ext_resource type="Texture2D" uid="uid://e7jgkha4kjjb" path="res://pngs/1.png" id="2_f6ef4"]
[ext_resource type="Texture2D" uid="uid://tmr3p2qwjc7u" path="res://pngs/g.png" id="3_rywde"]
[ext_resource type="AudioStream" uid="uid://bnw7n03jdipy0" path="res://sound/m/1.wav" id="4_xiro0"]
[ext_resource type="AudioStream" uid="uid://bceggc48wugap" path="res://sound/m/2.wav" id="5_w6hnc"]
[ext_resource type="AudioStream" uid="uid://brtx04xmg6j7" path="res://sound/m/3.wav" id="6_csqki"]
[ext_resource type="AudioStream" uid="uid://c450hnrqob721" path="res://sound/m/4.wav" id="7_q28xn"]
[ext_resource type="AudioStream" uid="uid://f57w83qkl2vb" path="res://sound/m/5.wav" id="8_arpfm"]
[ext_resource type="AudioStream" uid="uid://btr6yrl0ysvhi" path="res://music/gameover.wav" id="9_23bpy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bjd6m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f6ef4")
}, {
"duration": 1.0,
"texture": ExtResource("3_rywde")
}],
"loop": false,
"name": &"default",
"speed": 60.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v86vc"]
radius = 65.0
height = 144.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kuq6"]
size = Vector2(120, 150)

[node name="mob0" type="Area2D" groups=["mob0"]]
position = Vector2(0, -100)
collision_layer = 2
script = ExtResource("1_d1843")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_bjd6m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_v86vc")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9.53674e-07, -2.5)
scale = Vector2(3.4, 6.75)

[node name="sound" type="Node" parent="."]

[node name="m0" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("4_xiro0")
volume_db = 4.0

[node name="m1" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("5_w6hnc")
volume_db = 4.0

[node name="m2" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("6_csqki")
volume_db = 4.0

[node name="m3" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("7_q28xn")
volume_db = 4.0

[node name="m4" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("8_arpfm")
volume_db = 4.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_23bpy")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource("RectangleShape2D_0kuq6")

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
